Bugfix (bandaid): hiding duplicate shifts
-temporarily hiding duplicate shifts by giving the shift on top a white background

--- a/aspnet-core/src/pogoshift.Web.Mvc/wwwroot/css/calendar.css
+++ b/aspnet-core/src/pogoshift.Web.Mvc/wwwroot/css/calendar.css
@@ -710,6 +710,7 @@
 
 .scheduling-calendar .time-period {
     opacity: 0.4;
+    background-color: #FFFFFF;
 }
 
     .scheduling-calendar .time-period.shift,
